data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1158.wast
;; 9. **Test Description**:    - Implement a `loop` with nested `br_table` instructions, where the inner `br_table` indexes are dependent on the outer loop's stack values, causing potential out-of-range indices.    - **Constraint**: Checks multi-level branching scenarios with context-aware index derivation.    - **Edge Case**: Detects incorrect state handling and branch index computation across nested structures.

(assert_invalid
  (module
    (func $nested-br-table-loop
      (param i32) (result i32)
      (local i32)
      (loop (result i32)
        (br_table 0 1 2 3 (i32.const 42))
        (i32.const 100)
        (loop (result i32)
          (i32.const 1)
          (i32.const 2)
          (i32.const 3)
          (br_table 0 1 2 (local.get 0))  
          (i32.const 200)
        )
      )
    )
  )
  "index out of range"
)